data/derived/fa15/progs/unify/prog0874.ml.out
Characters 70-71:
  List.fold_left f base fs;;
                 ^
Error: This expression has type int -> int -> int list
       but an expression was expected of type int -> int -> int
       Type int list is not compatible with type int 
